# rpg-combat-tui

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: rust.yml
core/: Cargo.toml
core/src/: dto.rs  lib.rs
core/src/combat/: entity.rs  mod.rs  tracker.rs
data/: encounter.yaml
player-client/: Cargo.toml
player-client/src/: app.rs  main.rs  player_state.rs  ui.rs  utils.rs
rpg-combat/: Cargo.toml
rpg-combat-tui/: Cargo.toml
rpg-combat-tui/src/: main.rs
rpg-combat-tui/src/combat/: entity.rs  tracker.rs
rpg-combat-tui/src/tui/: app.rs  cli.rs  server.rs  ui.rs  utils.rs
rpg-combat/src/: main.rs
rpg-combat/src/combat/: tracker.rs
rpg-combat/src/tui/: app.rs  server.rs  terminal.rs  ui.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
src/combat/: dice.rs  entity.rs  mod.rs  tracker.rs
src/tui/: app.rs  cli.rs  mod.rs  ui.rs  utils.rs
