[package]
name = "rpg-combat-tui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A terminal user interface (TUI) application for managing combats in role playing games like D&D."
categories = ["command-line-utilities"]
repository = "https://github.com/Bergschrat1/rpg-combat-tui"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tui-textarea = "0.7.0"
