[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.9.0"
itertools = "0.14.0"
log = "0.4.27"
uuid = { version = "1.13.1", features = ["serde", "v4"] }
serde_yml = "0.0.12"
serde_json = "1.0.140"
color-eyre = "0.6.5"
