[package]
name = "player-client"
version = "0.1.0"
edition = "2021"

[dependencies]
core = {path = "../core"}
color-eyre = "0.6.4"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
ratatui = "0.29.0"
crossterm = "0.29.0"
log = "0.4.27"
clap = { version = "4.5.39", features = ["derive"] }
env_logger = "0.11.8"
